# drf-referral

./: README.md  manage.py  pyproject.toml  tech_exercise.md
account/: admin.py  backend.py  models.py
account/migrations/: 0001_initial.py
api/: serializers.py  urls.py  views.py
drf_referral/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
